--- a/index.html
+++ b/index.html
@@ -46,26 +46,26 @@
                 <!-- card-1  -->
                 <div class="cards">
                     <img src="assets/card-icon.png" alt="">
-                    <h3 class="pillar-card-title">Innovation</h3>
-                    <p class="pillar-card-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <h3 class="shared-card-title">Innovation</h3>
+                    <p class="shared-card-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
                 <!-- card-2  -->
                 <div class="cards">
                     <img src="assets/card-icon.png" alt="">
-                    <h3 class="pillar-card-title">Sustainability</h3>
-                    <p class="pillar-card-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <h3 class="shared-card-title">Sustainability</h3>
+                    <p class="shared-card-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
                 <!-- card-3  -->
                 <div class="cards">
                     <img src="assets/card-icon.png" alt="">
-                    <h3 class="pillar-card-title">Infrastructure</h3>
-                    <p class="pillar-card-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <h3 class="shared-card-title">Infrastructure</h3>
+                    <p class="shared-card-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
                 <!-- card-4  -->
                 <div class="cards">
                     <img src="assets/card-icon.png" alt="">
-                    <h3 class="pillar-card-title">Empowerment</h3>
-                    <p class="pillar-card-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <h3 class="shared-card-title">Empowerment</h3>
+                    <p class="shared-card-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
             </div>
         </section>
@@ -75,7 +75,49 @@
 
         <section>
             <h1 class="shared-font-size-weight">The Vision of Future</h1>
+            <p class="p-style">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+
+            <!-- vision card container -->
+            <div class="vision-container">
+                <!-- card-1  -->
+                <div class="vision-card-shared vision-card-1-bg">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="shared-card-title">Digital Transformation</h3>
+                    <p class="p-style shared-card-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="vision-card-1-btn vision-card-btn-shared">Learn More</button>
+                </div>
+                <!-- card2  -->
+                <div class="vision-card-shared vision-card-2-bg">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="shared-card-title">Digital Transformation</h3>
+                    <p class="p-style shared-card-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="vision-card-2-btn vision-card-btn-shared">Learn More</button>
+                </div>
+                <!-- card-3  -->
+                <div class="vision-card-shared vision-card-3-bg">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="shared-card-title">Digital Transformation</h3>
+                    <p class="p-style shared-card-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="vision-card-1-btn vision-card-btn-shared">Learn More</button>
+                </div>
+            </div>
         </section>
+
+        <!-- text area section  -->
+        <section>
+            <div class="text-area-content">
+                <p class="p-style">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos
+                    deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis
+                    culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit,
+                    dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam
+                    tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto
+                    soluta necessitatibus vero?"</p>
+                <h3 class="dr-younus">Dr. Muhammad Yunus</h3>
+                <p class="p-style">Chief Adviser of the People's Republic of Bangladesh</p>
+            </div>
+        </section>
+
+
     </main>
 
         <!-- footer section -->
