--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
                 <!-- card2  -->
                 <div class="vision-card-shared vision-card-2-bg">
                     <img src="assets/card-icon.png" alt="">
-                    <h3 class="shared-card-title">Digital Transformation</h3>
+                    <h3 class="shared-card-title">Green Energy</h3>
                     <p class="p-style shared-card-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
                     <button class="vision-card-2-btn vision-card-btn-shared">Learn More</button>
                 </div>
                 <!-- card-3  -->
                 <div class="vision-card-shared vision-card-3-bg">
                     <img src="assets/card-icon.png" alt="">
-                    <h3 class="shared-card-title">Digital Transformation</h3>
+                    <h3 class="shared-card-title">Modern Infrastructure</h3>
                     <p class="p-style shared-card-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
                     <button class="vision-card-1-btn vision-card-btn-shared">Learn More</button>
                 </div>
@@ -117,7 +117,53 @@
             </div>
         </section>
 
+        <!-- resent news section  -->
+        <section>
+            <h1 class="shared-font-size-weight">Resent News</h1>
+            <p class="p-style">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            
+            <!-- newspaper section 1  -->
+            <div class="news-section-1">
+                <div>
+                    <img class="news-image" src="assets/satelite.png" alt="">
+                </div>
+                <div>
+                    <h3 class="news-section-title">Bangladesh Launches New Satellite</h3>
+                    <img class="newspaper-name" src="assets/al-jazeera.png" alt="">
+                    <p class="p-style margin-shared">Date: 05/11/2025 <span class="time">Time: 10:25 PM</span></p>
+                    <p class="p-style">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree justification, be able to speak of humankind as civilized</p>
+                    <button class="btn-secondary">Read More</button>
+                </div>
+            </div>
 
+            <!-- newspaper section 2  -->
+            <div class="news-section-2">
+                <div>
+                    <h3 class="news-section-title">Bangladesh Launches New Satellite</h3>
+                    <img class="newspaper-name" src="assets/al-jazeera.png" alt="">
+                    <p class="p-style margin-shared">Date: 05/11/2025<span class="time">Time: 10:25 PM</span></p>
+                    <p class="p-style">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree justification, be able to speak of humankind as civilized</p>
+                    <button class="btn-secondary">Read More</button>
+                </div>
+                <div>
+                    <img class="news-image" src="assets/satelite.png" alt="">
+                </div>
+            </div>
+
+            <!-- newspaper section 3  -->
+            <div class="news-section-1">
+                <div>
+                    <img class="news-image" src="assets/satelite.png" alt="">
+                </div>
+                <div>
+                    <h3 class="news-section-title">Bangladesh Launches New Satellite</h3>
+                    <img class="newspaper-name" src="assets/al-jazeera.png" alt="">
+                    <p class="p-style margin-shared">Date: 05/11/2025 <span class="time">Time: 10:25 PM</span></p>
+                    <p class="p-style">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree justification, be able to speak of humankind as civilized</p>
+                    <button class="btn-secondary">Read More</button>
+                </div>
+            </div>
+        </section>
     </main>
 
         <!-- footer section -->
