hover effect added all the button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="width-margin">
 
         <!-- pillar section -->
         <section>
@@ -97,7 +97,7 @@
                     <img src="assets/card-icon.png" alt="">
                     <h3 class="shared-card-title">Modern Infrastructure</h3>
                     <p class="p-style shared-card-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
-                    <button class="vision-card-1-btn vision-card-btn-shared">Learn More</button>
+                    <button class="vision-card-3-btn vision-card-btn-shared">Learn More</button>
                 </div>
             </div>
         </section>
@@ -184,7 +184,16 @@
 
     <!-- footer section -->
     <footer class="footer-section">
-       
+
+        <div class="footer">
+            <h3 class="footer-title">Bangladesh 2.0</h3>
+            <div class="horizontal-line"></div>
+            <div class="social-media">
+                <a href="#"><img src="assets/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="assets/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="assets/x.png" alt="X"></a>
+            </div>
+        </div>
     </footer>
 </body>
 
