donate section added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 1</title>
+    <title>Aassignment 1</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -163,6 +163,40 @@
                 </div>
             </div>
         </section>
+
+        <!-- Donate section  -->
+         <section>
+            <h1 class="shared-font-size-weight text-align">Donate Today</h1>
+            <p class="donate-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+
+            <!-- currency card section  -->
+            <div class="currency-container">
+                <!-- card-1  -->
+                <div class="currency-shared-style">
+                    <h1>100 Taka</h1>
+                </div>
+                <!-- card 2  -->
+                <div id="currency-200">
+                    <h1>200 Taka</h1>
+                </div>
+                <!-- card -3 -->
+                <div class="currency-shared-style">
+                    <h1>500 Taka</h1>
+                </div>
+                <!-- card -4  -->
+                <div class="currency-shared-style">
+                    <h1>1000 Taka</h1>
+                </div>
+            </div>
+            <div class="amount-input-box text-allign ">
+                <input type="text" placeholder="Other Amount (taka)">
+            </div>
+            <div class="text-align">
+                <button class="done-now-btn">Done Now</button>
+            </div>
+                
+            
+         </section>
 
         <!-- Subscribe Newsletter section -->
          <section>
