opinion section added

--- a/index.html
+++ b/index.html
@@ -116,6 +116,49 @@
             </div>
         </section>
 
+        <!-- Opinion Section -->
+         <section>
+            <h1 class="shared-font-size-weight">Your Opinion matters</h1>
+            <div class="table-div">
+                <table>
+                    <!-- first row  -->
+                    <tr>
+                        <th class="question">Question</th>
+                        <th>Select Your Opinion</th>
+                    </tr>
+                    <!-- second row  -->
+                    <tr>
+                        <td>Do you belive Bangladesh is on the right path toward becoming a developed nation?</td>
+                        <td>
+                            <select name="" id="">
+                                <option value="" selected>Yes,I Agree</option>
+                                <option value="">Not Agree</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <!-- third row -->
+                    <tr>
+                        <td>Do you belive Bangladesh is on the right path toward becoming a developed nation?</td>
+                        <td>
+                            <select name="" id="">
+                                <option value="" selected>Yes,I Agree</option>
+                                <option value="">Not Agree</option>
+                            </select>
+                        </td>
+                    </tr>
+                     <!-- Forth row -->
+                     <tr>
+                        <td>Do you belive Bangladesh is on the right path toward becoming a developed nation?</td>
+                        <td>
+                            <select name="" id="">
+                                <option value="" selected>Yes,I Agree</option>
+                                <option value="">Not Agree</option>
+                            </select>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+         </section>
         <!-- Resent news section  -->
         <section>
             <h1 class="shared-font-size-weight">Resent News</h1>
