pillar of bangladesh section updated

--- a/index.html
+++ b/index.html
@@ -47,25 +47,26 @@
                 <div class="cards">
                     <img src="assets/card-icon.png" alt="">
                     <h3 class="shared-card-title">Innovation</h3>
-                    <p class="shared-card-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <p class="shared-card-description">A future-ready Bangladesh thrives on innovation, fostering a digital economy, research-driven industries, and a culture of entrepreneurship.
+                    </p>
                 </div>
                 <!-- card-2  -->
                 <div class="cards">
                     <img src="assets/card-icon.png" alt="">
                     <h3 class="shared-card-title">Sustainability</h3>
-                    <p class="shared-card-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <p class="shared-card-description">Economic growth must go hand in hand with environmental responsibility.Bangladesh 2.0 priority green energy and sustainable urban planning</p>
                 </div>
                 <!-- card-3  -->
                 <div class="cards">
                     <img src="assets/card-icon.png" alt="">
                     <h3 class="shared-card-title">Infrastructure</h3>
-                    <p class="shared-card-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <p class="shared-card-description">A strong foundation of world-class infrastructure, including smart cities, high-speed connectivity, and efficient transportation networks. </p>
                 </div>
                 <!-- card-4  -->
                 <div class="cards">
                     <img src="assets/card-icon.png" alt="">
                     <h3 class="shared-card-title">Empowerment</h3>
-                    <p class="shared-card-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <p class="shared-card-description">Bangladesh 2.0 is about people-centric development,ensuring equal opportunities through education,skills development and social inclusion. </p>
                 </div>
             </div>
         </section>
