text area updated

--- a/index.html
+++ b/index.html
@@ -106,12 +106,7 @@
         <!-- text area section  -->
         <section>
             <div class="text-area-content">
-                <p class="p-style">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos
-                    deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis
-                    culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit,
-                    dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam
-                    tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto
-                    soluta necessitatibus vero?"</p>
+                <p class="p-style">Bangladesh has already shown the world what resilience, innovation and entrepreneurship can achieve. Now, as we move toward ‘Bangladesh 2.0,’ we must focus on building a future that is not only economically strong but also socially inclusive and environmentally sustainable.Bangladesh 2.0 is not just about GDP growth—it’s about human growth. A future where no one is left behind. A future where innovation serves humanity. Let us build that future together"</p>
                 <h3 class="dr-younus">Dr. Muhammad Yunus</h3>
                 <p class="p-style">Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
